samples/_failures_safe/1761712320_2e481f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23e08551.c: In function ‘main’:
./samples/SAFE/__tmp_23e08551.c:132:11: error: expected ‘;’ at end of input
  132 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_23e08551.c:132:5: error: expected declaration or statement at end of input
  132 |     printf
      |     ^~~~~~
